# electroviz

./: .gitignore  README.md  pyproject.toml  setup.cfg
ecephys_viz/: Probe.py  VisualStim.py
electro_viz/: Channel.py  Experiment.py  OptoStim.py  Population.py  Stimulus.py  Unit.py  __init__.py
electroviz/: __init__.py  btss.py  btsstim.py  channel.py  dataset.py  experiment.py  nidaq.py  optogeneticstimulus.py  population.py  probe.py  stimulus.py  unit.py  utils.py
electroviz/core/: event.py  experiment.py  kernel.py  population.py  probe.py  stimulus.py  unit.py
electroviz/io/: reader.py  writer.py
electroviz/streams/: __init__.py  btss.py  digitalchannel.py  imec.py  kilosort.py  lfp.py  nidaq.py  spikes.py  vstim.py
electroviz/utils/: align_sync.py  cross_corr.py  extractDigital.py  gainCorrect.py  icsd.py  imec_sets.py  parse_units.py  save_matlab.py
electroviz/viz/: kernels.py  psth.py  raster.py  summary.py
notebooks/: cross_corr.ipynb  feature_testing.ipynb  figures.ipynb  plotting.ipynb  sandbox.ipynb  sparse_noise.ipynb  test_plotting.ipynb  testing.ipynb
