# MIT License
# Copyright (c) 2022 Ryan Gorzek
# https://github.com/gorzek-ryan/electro_viz/blob/main/LICENSE
# https://opensource.org/licenses/MIT

[metadata]
name = electro_viz
version = 0.0.1
author = Ryan Gorzek
author_email = ryan.gorzek@icloud.com
description = Extracellular electrophysiology data visualization tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gorzek-ryan/electro_viz
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
