# MIT License
# Copyright (c) 2022 Ryan Gorzek
# https://github.com/gorzek-ryan/electroviz/blob/main/LICENSE
# https://opensource.org/licenses/MIT

[metadata]
name = electroviz
version = 0.0.1
author = Ryan Gorzek
author_email = ryan.gorzek@icloud.com
description = Extracellular electrophysiology data processing, analysis, and visualization tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gorzek-ryan/electroviz
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.9
include_package_data = True
packages = find:
install_requires =
    numpy
    pandas
    matplotlib
    scikit-image
